# RecipeLanes

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FEATURES.md  GEMINI.md  PRODUCT_ARCHITECTURE.md  README.md  git_workflow.md  package-lock.json  prompt.md  server.pid  sharing_overrides.md  style_sample.html  tools.md
.github/: main-merge-queue-ruleset.json
docs/: ARCHITECTURE.md  BILLING.md  BILLING_IMPLEMENTATION.md  BILLING_TASKS.md  DEPLOYMENT.md  README.md  WORKLOG.md  agent-isolation-roadmap.md  alerting-icon-forge.md  architecture-audit-2026-07.md  gemini-agent.md  git_workflow.md  prompt.md  recipe_title_edit_bug.md  refactor_test_plan.md  score_logic.md  sharing_overrides.md  tools.md
examples/: mangomisu.json
minigames/: .gitignore  README.md  package-lock.json  package.json  setup.sh
minigames/rust-embed/: Cargo.toml
minigames/rust-embed/src/: main.rs
penrose_test/: README.md  check_penrose.mjs  check_tosvg.mjs  debug_flow.mjs  package-lock.json  package.json  repro_issue.mjs
playtest/: package-lock.json  package.json  playwright.config.ts
recipe-lanes/: .dockerignore  .env.test  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  TESTING.md  apphosting.ctf.yaml  apphosting.prod.yaml  apphosting.staging.yaml  eslint.config.mjs  firebase.json  firestore.indexes.json  firestore.rules  instrumentation.ts  knip.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  postcss.config.mjs  prompt.md  score_logic.md  test-import.ts  test_output.txt  test_output_refactor.txt
recipe-rpg-simple/: .env.test  .firebaserc  .gitignore  (+18 more)
(+684 files in other folders)
