[package]
name = "rust-embed"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
fastembed = "3.8"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
